feat:refine structure concurrency
Signed-off-by: grapebaba <281165273@qq.com>